Fix getBankTransactionTypes endpoint - clear lazy-loaded relationships
- Fixed Java compatibility issue: replaced .toList() with .collect(Collectors.toList())
- Added import for Collectors
- Clear lazy-loaded relationships (parentChartOfAccount, coacoaCategoryList, coatransactionCategoryList) before JSON serialization to prevent LazyInitializationException
- This fixes the 500 error when calling /rest/datalist/getBankTransactionTypes

Co-authored-by: Cursor <cursoragent@cursor.com>